[gd_scene load_steps=2 format=3 uid="uid://bxqyp8xwqr3sl"]

[ext_resource type="Script" path="res://scenes/main_menu_controller.gd" id="1_main_menu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.1, 0.14, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -450.0
offset_right = 250.0
offset_bottom = 450.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.5, 1)
theme_override_font_sizes/font_size = 72
text = "üóº TOWER
STACKING"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="PlayButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 90)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 36
text = "‚ñ∂ OYNA"

[node name="ModesButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 70)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 28
text = "üéÆ MODLAR"

[node name="ButtonRow" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ShopButton" type="Button" parent="VBoxContainer/ButtonRow"]
custom_minimum_size = Vector2(190, 70)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "üõí Maƒüaza"

[node name="AchievementsButton" type="Button" parent="VBoxContainer/ButtonRow"]
custom_minimum_size = Vector2(190, 70)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "üéñÔ∏è Ba≈üarƒ±m"

[node name="ButtonRow2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="LeaderboardButton" type="Button" parent="VBoxContainer/ButtonRow2"]
custom_minimum_size = Vector2(190, 70)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "üèÜ Liderlik"

[node name="SettingsButton" type="Button" parent="VBoxContainer/ButtonRow2"]
custom_minimum_size = Vector2(190, 70)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "‚öôÔ∏è Ayarlar"

[node name="NoAdsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 22
text = "üö´ Reklam Kaldƒ±r"

[node name="HighScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_font_sizes/font_size = 28
text = "üèÖ EN Y√úKSEK: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -40.0
offset_right = 100.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.4, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 16
text = "v2.0.0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/ModesButton" to="." method="_on_modes_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonRow/ShopButton" to="." method="_on_shop_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonRow/AchievementsButton" to="." method="_on_achievements_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonRow2/LeaderboardButton" to="." method="_on_leaderboard_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonRow2/SettingsButton" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/NoAdsButton" to="." method="_on_no_ads_pressed"]
